# ext-bom-fold

./: Cargo.toml  Dockerfile  LICENSE  README.md
bom_fold/: Cargo.toml
bom_fold/src/: lib.rs
bom_fold/src/materialize/: mod.rs
bom_fold/src/parse/: csv.rs  mod.rs  xlsx.rs
bom_fold/src/transform/: absolute_parent_locator.rs  data.rs  mod.rs  ordered_level_key.rs  rules.rs
error/: Cargo.toml  build.rs
error/proto/: error_details.proto
error/src/: common.rs  csv.rs  error.rs  error_details.rs  lib.rs  macros.rs
