[workspace]

members = [
  "bom_fold",
  "error"
]

[workspace.dependencies]
backtrace = "0.3.66"
bytes = "1.2.1"
chrono = "0.4.19"
clap = { version = "4.0.17", features = ["derive"] }
csv = "1.1.6" 
prost = "0.11.0"
prost-build = "0.11.1"
prost-types = "0.11.1"
serde = "1.0.145"
time = "0.1.44"
tracing = "0.1.37"
xlsxwriter = "0.6.0"
pretty_assertions = "1.3.0"

bom_fold = { path = "bom_fold" }
error = { path = "error" }

[workspace.package]
version = "0.1.0"
rust-version = "1.68"
